force-app/main/default/objects/PineLabs_Machine_Info__c/PineLabs_Machine_Info__c.object-meta.xml
<CustomObject>
    <label>PineLabs Machine Info</label>
    <nameField>
        <displayFormat>PM-No-{000000}</displayFormat>
        <label>PineLabs Machine No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PineLabs Machine Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>