force-app/main/default/objects/PineLabs_Machine_Info__c/fields/Device_No__c.field-meta.xml
<CustomField>
    <fullName>Device_No__c</fullName>
    <label>Device No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>