force-app/main/default/objects/PineLabs_Machine_Info__c/fields/Hardware_S_N__c.field-meta.xml
<CustomField>
    <fullName>Hardware_S_N__c</fullName>
    <label>Hardware S/N</label>
    <length>255</length>
    <type>Text</type>
</CustomField>