force-app/main/default/objects/PineLabs_Machine_Info__c/fields/IMEI__c.field-meta.xml
<CustomField>
    <fullName>IMEI__c</fullName>
    <label>IMEI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>