force-app/main/default/objects/PineLabs_Machine_Info__c/fields/Merchant_Store_POS_Code__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Store_POS_Code__c</fullName>
    <label>Merchant Store POS Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>