force-app/main/default/objects/PineLabs_Machine_Info__c/fields/Store_Name__c.field-meta.xml
<CustomField>
    <fullName>Store_Name__c</fullName>
    <label>Store Name</label>
    <type>TextArea</type>
</CustomField>