force-app/main/default/objects/PineLabs_Machine_Info__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <label>User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>