force-app/main/default/objects/PineLabs_Machine_Info__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Merchant_ID__c</columns>
    <columns>Merchant_Name__c</columns>
    <columns>Security_Token__c</columns>
    <columns>Store_Id__c</columns>
    <columns>Device_No__c</columns>
    <columns>Store_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>